anonymize manuscript for submission

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -24,6 +24,7 @@
 \usepackage{enumerate}
 \usepackage[table]{xcolor}
 \usepackage{authblk}
+\usepackage{lineno}
 %%%%%%%%%%%%%%%%%
 
 \newcommand{\colortext}[1]{\textcolor{blue}{#1}}
@@ -41,16 +42,19 @@
 
 \setlength{\tabcolsep}{3pt}
 
-\title{Properties of Winning Iterated Prisoner's Dilemma Strategies.}
-\author[1, 2]{Nikoleta E. Glynatsi}
-\author[2, $\dagger$]{Vincent Knight}
-\author[3, $\dagger$]{Marc Harper}
+% \linenumbers
 
-\affil[1]{Max Planck Institute for Evolutionary Biology, Research Group Dynamics of Social
-Behavior, Germany}
-\affil[2]{Cardiff University, School of Mathematics, UK}
-\affil[3]{Google Inc., Mountain View, CA, USA}
-\affil[$\dagger$]{V.K. and M.H. contributed equally to this work.}
+\title{Properties of Winning Iterated Prisoner's Dilemma Strategies.}
+\author{}
+% \author[1, 2]{Nikoleta E. Glynatsi}
+% \author[2, $\dagger$]{Vincent Knight}
+% \author[3, $\dagger$]{Marc Harper}
+
+% \affil[1]{Max Planck Institute for Evolutionary Biology, Research Group Dynamics of Social
+% Behavior, Germany}
+% \affil[2]{Cardiff University, School of Mathematics, UK}
+% \affil[3]{Google Inc., Mountain View, CA, USA}
+% \affil[$\dagger$]{V.K. and M.H. contributed equally to this work.}
 \date{}
 
 
@@ -843,19 +847,20 @@ random forest classifier and a clustering approach. The results of these
 analyses are also in line with the results presented here.
 
 The data set described in this work contains the largest number of \IPD{}
-tournaments, to the authors knowledge. The raw data set is available
-at~\cite{raw_data} and the processed data at~\cite{data}. Further data mining
+tournaments, to the authors knowledge. The raw data set and the processed data
+have been made available online. Further data mining
 could be applied and provide new insights in the field.
 
 \section{Data availability statement}
 
-The raw and processed datasets have been made publicly available~\cite{data,
-raw_data} and can be used for further analysis and insights.
+The raw and processed datasets have been made publicly available
+% ~\cite{data, raw_data} 
+and can be used for further analysis and insights.
 
 \section{Acknowledgements}
 
-N.G. acknowledges the generous support of the European Research Council Starting
-Grant 850529: E-DIRECT and the Max Planck Society.
+% N.G. acknowledges the generous support of the European Research Council Starting
+% Grant 850529: E-DIRECT and the Max Planck Society.
 A variety of open-source software have been used in this work. The authors would
 like to express their gratitude to the open-source software community, whose
 invaluable contributions significantly enhanced the development and execution of
