--- a/paper/si.tex
+++ b/paper/si.tex
@@ -22,6 +22,7 @@
 \usepackage{wrapfig, blindtext}
 \usepackage{soul}
 \usepackage[table]{xcolor}
+\usepackage{lineno}
 %%%%%%%%%%%%%%%%%
 
 \definecolor{Gray}{gray}{0.92}
@@ -35,8 +36,11 @@
 
 \setlength{\tabcolsep}{3pt}
 
+% \linenumbers
+
 \title{{\LARGE Electronic supplementary material}\\{\bf \LARGE Properties of Winning Iterated Prisoner's Dilemma Strategies}}
-\author{Nikoleta E. Glynatsi, Vincent A. Knight, Marc Harper}
+% \author{Nikoleta E. Glynatsi, Vincent A. Knight, Marc Harper}
+\author{}
 \date{}
 
 \begin{document}
