Last edits special issue submission (#35)
* change NG affiliation, note that VK and MH contributed equally + ref style

* adding a bit more discussion based on MH thoughts

* change bin size for hist plots

* move last sections around

* draft cover letter

* add reviewers' details

* addressing MH last comment

* anonymize manuscript for submission

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -24,6 +24,7 @@
 \usepackage{enumerate}
 \usepackage[table]{xcolor}
 \usepackage{authblk}
+\usepackage{lineno}
 %%%%%%%%%%%%%%%%%
 
 \newcommand{\colortext}[1]{\textcolor{blue}{#1}}
@@ -41,15 +42,19 @@
 
 \setlength{\tabcolsep}{3pt}
 
-\title{Properties of Winning Iterated Prisoner's Dilemma Strategies.}
-\author[1]{Nikoleta E. Glynatsi}
-\author[2]{Vincent Knight}
-\author[3]{Marc Harper}
+% \linenumbers
 
-\affil[1]{Max Planck Institute for Evolutionary Biology, Research Group Dynamics of Social
-Behavior, Germany}
-\affil[2]{Cardiff University, School of Mathematics, UK}
-\affil[3]{Google Inc., Mountain View, CA, USA}
+\title{Properties of Winning Iterated Prisoner's Dilemma Strategies.}
+\author{}
+% \author[1, 2]{Nikoleta E. Glynatsi}
+% \author[2, $\dagger$]{Vincent Knight}
+% \author[3, $\dagger$]{Marc Harper}
+
+% \affil[1]{Max Planck Institute for Evolutionary Biology, Research Group Dynamics of Social
+% Behavior, Germany}
+% \affil[2]{Cardiff University, School of Mathematics, UK}
+% \affil[3]{Google Inc., Mountain View, CA, USA}
+% \affil[$\dagger$]{V.K. and M.H. contributed equally to this work.}
 \date{}
 
 
@@ -65,22 +70,27 @@ structures such as neural networks. Many new strategies have been introduced and
 in a variety of tournaments and population dynamics. Typical results in the literature,
 however, rely on performance against a small number of somewhat arbitrarily selected
 strategies in a small number of tournaments, casting doubt on the generalizability
-of conclusions. We analyze a large collection of \numberofstrategies
+of conclusions. In this work, we analyze a large collection of \numberofstrategies
 strategies in thousands of computer tournaments, present the top performing strategies across multiple
-tournament types, and distill their salient features.
-The results show that there is not yet a single
-strategy that performs well in diverse Iterated Prisoner's Dilemma scenarios,
-nevertheless there are several properties that heavily influence the best performing
-strategies. This refines the properties described by Axelrod in light of
-recent and more diverse opponent populations to: be nice, be provocable and generous,
-be a little envious, be clever, and adapt to the environment. More precisely,
+tournament types, and distill their salient features. 
+We find that although a strategy's high ranking in a specific environment
+does not guarantee success across different tournament types, certain strategies
+consistently perform well across various settings. Notably,
+strategies designed or trained for noise are the strategies that generalise
+better—an observation well established in AI/ML literature where adding noise to
+training data enhances model robustness.
+We identify several crucial properties
+heavily influencing the success of strategies, refining Axelrod's described
+properties in light of encounters with more diverse opponents to: being
+cooperative, responsive to provocation, generous yet slightly envious, clever,
+and adaptable to the prevailing environment. More precisely,
 we find that strategies perform best when their probability of cooperation
 matches the total tournament population's aggregate cooperation probabilities.
 The features of high performing strategies help cast some light on why
 strategies such as Tit For Tat performed historically well in tournaments and
 why zero-determinant strategies typically do not fare well in tournament
 settings. Furthermore, our findings have implications for the future training of
-autonomous agents. Understanding the crucial features for incorporation into
+autonomous agents, as understanding the crucial features for incorporation into
 these agents becomes essential.
 \end{abstract}
 
@@ -186,22 +196,27 @@ implementations or code. Despite these challenges, the absence of thorough
 testing raises concerns about claims regarding the superiority or robustness of
 newly introduced strategies.
 
-In this paper we evaluate the performance of a significant number of \IPD{}
+In this paper, we evaluate the performance of a significant number of \IPD{}
 strategies across a diverse array of tournaments. Many of the strategies used in
-our analysis are drawn from well-known and named strategies in \IPD{} literature,
-including previous tournament winners. This contrasts with other work that may
-have randomly generated essentially arbitrary strategies, often constrained to
-specific classes such as memory-one strategies or those of a certain structural
-form like finite state machines or deterministic memory-two strategies.
-Furthermore, our tournaments encompass variations including standard
+our analysis are drawn from well-known and named strategies in \IPD{}
+literature, including previous tournament winners. This contrasts with other
+work that may have randomly generated essentially arbitrary strategies, often
+constrained to specific classes such as memory-one strategies or those of a
+certain structural form like finite state machines or deterministic memory-two
+strategies. Furthermore, our tournaments encompass variations, including standard
 tournaments resembling Axelrod's original ones, tournaments with noise,
 probabilistic match length, and both noise and probabilistic match length. This
 diversity in strategies and tournament types provides new insights and tests
 earlier claims in alternative settings against known powerful strategies.
+More specifically, we show that the previous tournament
+winners are lacking against large enough opponent pools; they do not appear
+among the top-performing strategies anymore. This could be due to likely
+suffering from a lack of diversity in the strategies they were trained/tested
+against, finding it hard to adapt to the new strategies.
 
 It is important to note that we do not assert the existence of a single
 best-performing strategy across all tournaments or tournament types. On the
-contrary, our work demonstrates that such a strategy does not exist
+contrary, our work demonstrates that such a strategy does not always exist
 (notwithstanding a few strategies with broadly high performance). The primary
 objective of this paper, presented in the latter parts of the paper, is to
 continue the discussion on the properties of successful strategies, a
@@ -733,24 +748,28 @@ expected, skewed towards 0.
 
 \section{Discussion}\label{section:conclusion}
 
-This manuscript explored the performance of \numberofstrategies strategies of
+This manuscript explores the performance of \numberofstrategies strategies in
 the \IPD{} in thousands of computer tournaments. The collection of computer
-tournaments presented here is the largest and most diverse collection in the
-literature. The \numberofstrategies strategies are drawn from the Axelrod Python Library and
-include strategies from the \IPD{} literature. The computer tournaments include
-tournaments of four different types. So what is the best way of playing the
-\IPD{}? And is there a single dominant strategy for the \IPD{}? There was not a
-single strategy within the collection of the \numberofstrategies strategies that
-managed to perform well in all the tournaments variations it competed in. Even
-if on average a strategy ranked highly in a specific environment this did not
-guarantee its success over the different tournament types. Nevertheless, in
-subsections~\ref{section:top_performances}
-and~\ref{section:evaluation_of_performance} we examined the best performing
-strategies across various tournament types and analysed their salient features.
-this demonstrated that there are properties associated with the success of
-strategies which in fact contradict the originally suggested properties of
-Axelrod~\cite{Axelrod1981}.
+tournaments presented here is the largest and most diverse in the literature.
+The \numberofstrategies strategies are drawn from \axelrod{} library and include
+strategies from the \IPD{} literature. The computer tournaments encompass four
+different types. So, what is the best way to play the \IPD{}? And is there a
+single dominant strategy for the \IPD{}?
+A strategy ranking highly in a
+specific environment did not guarantee its success over different tournament
+types, with a few exceptions - strategies that generalize better. Already
+well-known in the AI/ML literature, adding noise to training data leads to more
+robust models. We see that clearly here, where the strategies trained for noise
+(or designed for noise) tend to be better generalists. There were instances
+where a few strategies trained in narrow conditions outperformed more generalist
+strategies, as they tend to overfit. However, the strategies trained with noise
+perform well in general, whilst the strategies trained specifically on no noise
+or small subpopulations do not.
 
+We also examined the best-performing strategies across various tournament
+types and analyzed their salient features. This demonstrated that there are
+properties associated with the success of strategies that contradict the
+originally suggested properties of Axelrod~\cite{Axelrod1981}.
 We showed that complex or \textbf{clever} strategies can be effective, whether
 trained against a corpus of possible opponents or purposely designed to mitigate
 the impact of noise such as the DBS strategy. Moreover, we found some
@@ -828,15 +847,20 @@ random forest classifier and a clustering approach. The results of these
 analyses are also in line with the results presented here.
 
 The data set described in this work contains the largest number of \IPD{}
-tournaments, to the authors knowledge. The raw data set is available
-at~\cite{raw_data} and the processed data at~\cite{data}. Further data mining
+tournaments, to the authors knowledge. The raw data set and the processed data
+have been made available online. Further data mining
 could be applied and provide new insights in the field.
 
-\bibliographystyle{plain}
-\bibliography{bibliography}
+\section{Data availability statement}
+
+The raw and processed datasets have been made publicly available
+% ~\cite{data, raw_data} 
+and can be used for further analysis and insights.
 
 \section{Acknowledgements}
 
+% N.G. acknowledges the generous support of the European Research Council Starting
+% Grant 850529: E-DIRECT and the Max Planck Society.
 A variety of open-source software have been used in this work. The authors would
 like to express their gratitude to the open-source software community, whose
 invaluable contributions significantly enhanced the development and execution of
@@ -847,9 +871,7 @@ visualisation~\cite{hunter2007matplotlib}, The Numpy library for data
 manipulation~\cite{walt2011numpy}, and finally the scikit-learn library for data
 analysis~\cite{scikit-learn}.
 
-\section{Data availability statement}
-
-The raw and processed datasets have been made publicly available~\cite{data,
-raw_data} and can be used for further analysis and insights.
+\bibliographystyle{naturemag}
+\bibliography{bibliography}
 
 \end{document}
