--- a/paper/main.tex
+++ b/paper/main.tex
@@ -69,7 +69,7 @@ introduction of the zero-determinant strategies and the use of sophisticated lea
 structures such as neural networks. Many new strategies have been introduced and tested
 in a variety of tournaments and population dynamics. Typical results in the literature,
 however, rely on performance against a small number of somewhat arbitrarily selected
-strategies in a small number of tournaments, casting doubt on the generalizability
+strategies in a small number of tournaments and environments, casting doubt on the generalizability
 of conclusions. In this work, we analyze a large collection of \numberofstrategies
 strategies in thousands of computer tournaments, present the top performing strategies across multiple
 tournament types, and distill their salient features. 
@@ -147,7 +147,7 @@ then retaliated. Subsequently, \TFT{} would forgive an opponent that apologizes
 better than mutual defection.
 
 Due to the strategy's strong performance in both tournaments and a series of
-evolutionary experiments~\cite{Axelrod1981}, \TFT{} was often claimed to be a
+evolutionary experiments~\cite{Axelrod1981}, \TFT{} is often claimed to be a
 highly robust (and sometimes the most robust) strategy for the \IPD.
 There are strategies that have built upon \TFT{} and the reciprocity-based
 approach. In~\cite{Beaufils1997}, a strategy called Gradual was introduced,
@@ -226,7 +226,7 @@ strategy in the Iterated Prisoner's Dilemma (\IPD{}) are:
 
 \begin{enumerate}[(i)]
     \item Be a little bit envious
-    \item Be ``nice'' in non-noisy environments or when game lengths are longer
+    \item Be ``nice'' in non-noisy environments or when game lengths are longer (if known)
     \item Reciprocate both cooperation and defection appropriately;
     Be provocable in tournaments with short matches, and generous in tournaments with noise
     \item It's ok to be clever
@@ -239,7 +239,7 @@ strategies and those training strategies. Specifically, much like the recognized
 value of diversity in training datasets, such as variations in image perspective,
 skin color, etc., are critical in training accurate and generalizable machine
 learning models, we show that diversity in the population of opponent strategies
-is of paramount importance in the construction and evaluation of game theory
+is paramount in the construction and evaluation of game theory
 strategies. As AI agents start to interact as scale, they will benefit from
 exposure to a wide variety of alternative agents. Moreover, conducting a similar
 analysis can shed light on already trained strategies, aiding in understanding
