--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -152,7 +152,7 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   publisher={Public Library of Science}
 }
 @misc{axelrodproject,
-  author       = {The Axelrod project developers},
+  author       = {{The Axelrod project developers}},
   title        = {Axelrod: 3.0.0},
   month        = apr,
   year         = 2016,
@@ -236,22 +236,15 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   year={2015},
   publisher={The Royal Society}
 }
-@article{Knight2019,
-  author    = {V. A. Knight and
-               M. Harper and
-               N. E. Glynatsi and
-               J. Gillard},
-  title     = {Recognising and evaluating the effectiveness of extortion in the Iterated
-               Prisoner's Dilemma},
-  journal   = {CoRR},
-  volume    = {abs/1904.00973},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1904.00973},
-  archivePrefix = {arXiv},
-  eprint    = {1904.00973},
-  timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{Knight2024,
+  title={Recognising and evaluating the effectiveness of extortion in the Iterated Prisoner’s Dilemma},
+  author={Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E and Gillard, Jonathan},
+  journal={PloS one},
+  volume={19},
+  number={7},
+  pages={e0304641},
+  year={2024},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%TEXTBOOKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @inproceedings{Arthur2007,
@@ -526,7 +519,7 @@ author = "J. H. Miller"
 }
 
 @misc{Eckhart2015,
-  author       = {Eckhart A.},
+  author       = {Eckhart, Arnold},
   title        = {CoopSim v0.9.9 beta 6},
   year         = 2015,
   howpublished = "\url{https://github.com/jecki/CoopSim/}"
@@ -676,7 +669,7 @@ author = "J. H. Miller"
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{data,
-  author       = {Nikoleta E.},
+  author       = {Glynatsi, Nikoleta E.},
   title        = {{A data set of 45686 Iterated Prisoner's Dilemma 
                    tournaments' results}},
   month        = dec,
@@ -710,10 +703,72 @@ Conference on the Simulation of Adaptive Behavior (SAB-2000)},
  year = {2000}
 }
 
-@article{Knight2017evolution,
-  title={Evolution Reinforces Cooperation with the Emergence of
-  Self-Recognition Mechanisms: an empirical study of the Moran process for the iterated Prisoner's dilemma},
+@article{knight2018evolution,
+  title={Evolution reinforces cooperation with the emergence of self-recognition mechanisms: An empirical study of strategies in the Moran process for the iterated prisoner’s dilemma},
   author={Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E and Campbell, Owen},
-  journal={arXiv preprint arXiv:1707.06920},
-  year={2017}
+  journal={PloS one},
+  volume={13},
+  number={10},
+  pages={e0204981},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+
+%%%%%%%%%%%%%%%%%%% Papers the introduce strategies or general look into the best way to play
+
+@article{murase2021,
+  title={Friendly-rivalry solution to the iterated n-person public-goods game},
+  author={Murase, Yohsuke and Baek, Seung Ki},
+  journal={PLoS Computational Biology},
+  volume={17},
+  number={1},
+  pages={e1008217},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+
+@article{Schmid2022,
+  title={Direct reciprocity between individuals that use different strategy spaces},
+  author={Schmid, Laura and Hilbe, Christian and Chatterjee, Krishnendu and Nowak, Martin A},
+  journal={PLoS Computational Biology},
+  volume={18},
+  number={6},
+  pages={e1010149},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{Hilbe2017,
+  title={Memory-n strategies of direct reciprocity},
+  author={Hilbe, Christian and Martinez-Vaquero, Luis A and Chatterjee, Krishnendu and Nowak, Martin A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={18},
+  pages={4715--4720},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+
+@article{Glynatsi2020,
+  title={Using a theory of mind to find best responses to memory-one strategies},
+  author={Glynatsi, Nikoleta E and Knight, Vincent A},
+  journal={Scientific Reports},
+  volume={10},
+  number={1},
+  pages={17287},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{Chen2023,
+  title={Outlearning extortioners: unbending strategies can foster reciprocal fairness and cooperation},
+  author={Chen, Xingru and Fu, Feng},
+  journal={PNAS nexus},
+  volume={2},
+  number={6},
+  pages={pgad176},
+  year={2023},
+  publisher={Oxford University Press US}
 }
